# ekalavya

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: UI_AUDIT.md
scripts/: smoke_agent.py  smoke_providers.py  smoke_session.py
src/eklavya/: __init__.py  agent.py  assist.py  banner.py  chat.py  chatstore.py  cli.py  commands.py  config.py  dashboard.py  journey.py  mcp_client.py  mcp_server.py  progress.py  prompts.py  providers.py  report.py  repos.py  sandbox.py  scheduling.py  scoring.py  tools.py  tui.py  verify.py  webapp.py  workspace.py
src/eklavya/db/: __init__.py  schema.sql  store.py
tests/: test_aiinterview.py  test_anticheat.py  test_chatstore.py  test_cli_chats.py  test_commands.py  test_curriculum.py  test_dashboard.py  test_journey.py  test_mcp.py  test_newtools.py  test_practice.py  test_repos.py  test_tools.py  test_tui.py  test_verify.py  test_webapp.py  test_workspace.py
